--- a/parser/views/item_test.ejs
+++ b/parser/views/item_test.ejs
@@ -1,4 +1,4 @@
-<div class="btn-group btn-group-justified item-functions" id='@{model.item.id}'>
+<div class="btn-group btn-group-justified item-functions" id='<%= item.id %>'>
     <a id='test_source' class="btn btn-primary col-sm-3">
         <i class="glyphicon glyphicon-cloud default-icon"></i>
         <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate loading-icon" style="display: none;"></span>
@@ -15,23 +15,29 @@
         <br> Проверить парсинг
     </a>
 </div>
-<h2>@{model.item.name}</h2>
-<div class="alert alert-success" id='success_item_http' role="alert" style="display: none;">Запрос страницы источника успешно. STATUS = SUCCESS</div>
-<div class="alert alert-danger" id='fail_item_http' role="alert" style="display: none;">Запрос страницы источника провалился. STATUS = FAIL</div>
+<h2><%= item.name %></h2>
+<div class="alert alert-success" id='success_item_http' role="alert" style="display: none;">Запрос страницы источника
+    успешно. STATUS = SUCCESS
+</div>
+<div class="alert alert-danger" id='fail_item_http' role="alert" style="display: none;">Запрос страницы источника
+    провалился. STATUS = FAIL
+</div>
 <div class="panel panel-danger items_list_error" style="display:none;">
     <div class="panel-heading">Ссылки не спарсились. Результат парсинга:</div>
     <div class="panel-body">
         Panel content
     </div>
 </div>
-<div class="panel-group items_list_parsed" id="accordion" role="tablist" aria-multiselectable="true" style="display:none;">
+<div class="panel-group items_list_parsed" id="accordion" role="tablist" aria-multiselectable="true"
+     style="display:none;">
     <div class="panel panel-success">
         <div class="panel-heading" role="tab" id="headingTwo">
             <h4 class="panel-title">
-        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-          Спарсилась страница с ссылками. Получено <strong id='links_count'></strong> ссылок
-        </a>
-      </h4>
+                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne"
+                   aria-expanded="false" aria-controls="collapseOne">
+                    Спарсилась страница с ссылками. Получено <strong id='links_count'></strong> ссылок
+                </a>
+            </h4>
         </div>
         <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
             <div class="panel-body">
