--- a/parser/views/items_list.ejs
+++ b/parser/views/items_list.ejs
@@ -1,4 +1,4 @@
-<h1>dasdasdas</h1>
+<h1>Список сайтов для парсинга</h1>
 <div class="table-responsive">
     <table id="mytable" class="table table-bordred table-striped">
         <thead>
