--- a/parser/views/partials/menu.ejs
+++ b/parser/views/partials/menu.ejs
@@ -8,6 +8,7 @@
                 <li><a href="/"><i class="glyphicon glyphicon-home"></i> Главная</a></li>
                 <li><a href="/items"><i class="glyphicon glyphicon-list"></i> Список ресурсов</a></li>
                 <li><a href="/items/parse"><i class="glyphicon glyphicon-cog"></i> Спарсить один элемент</a></li>
+                <li><a href="/attributes_groups"><i class="glyphicon glyphicon-cog"></i> Группы аттрибутов</a></li>
                 <li><a href="#"><i class="glyphicon glyphicon-envelope"></i> Messages <span class="badge badge-info">4</span></a></li>
                 <li><a href="#"><i class="glyphicon glyphicon-cog"></i> Options</a></li>
                 <li><a href="#"><i class="glyphicon glyphicon-comment"></i> Shoutbox</a></li>
