--- a/parser/views/layouts/layout.ejs
+++ b/parser/views/layouts/layout.ejs
@@ -11,7 +11,9 @@
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="sty lesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/custom.css">
+
 </head>
 
 <body>
