--- a/parser/views/attributes_groups.ejs
+++ b/parser/views/attributes_groups.ejs
@@ -11,6 +11,7 @@
             </div>
         </div>
     </div>
+    <% console.log (AttributesGroups);%>
     <div class="panel-body">
         <table class="table table-striped table-bordered table-list">
             <thead>
