--- a/parser/views/attributes_groups.ejs
+++ b/parser/views/attributes_groups.ejs
@@ -4,39 +4,42 @@
     <div class="panel-heading">
         <div class="row">
             <div class="col col-xs-6">
-                <h3 class="panel-title">Panel Heading</h3>
+
             </div>
             <div class="col col-xs-6 text-right">
-                <button type="button" class="btn btn-sm btn-primary btn-create">Create New</button>
+                <button type="button" class="btn btn-sm btn-primary btn-create">Добавить новую группу</button>
             </div>
         </div>
     </div>
-    <% console.log (AttributesGroups);%>
+
     <div class="panel-body">
         <table class="table table-striped table-bordered table-list">
             <thead>
             <tr>
-                <th><em class="fa fa-cog"></em></th>
-                <th class="hidden-xs">ID</th>
-                <th>Name</th>
-                <th>Email</th>
+                <th><em class="glyphicon glyphicon-cog"></em></th>
+                <th class="hidden-xs">№</th>
+                <th>Название группы</th>
             </tr>
             </thead>
+            <% AttributesGroups.forEach(function(group, i) { %>
+
             <tbody>
             <tr>
                 <td align="center">
                     <a class="btn btn-default"><em class="glyphicon glyphicon-pencil"></em></a>
                     <a class="btn btn-danger"><em class="glyphicon glyphicon-trash"></em></a>
                 </td>
-                <td class="hidden-xs">1</td>
-                <td>John Doe</td>
-                <td>johndoe@example.com</td>
+                <td class="col-md-1 hidden-xs" style="text-align: center;"><%= i+1 %></td>
+                <td><%= group.group_name %></td>
+
             </tr>
+            <% }); %>
+
             </tbody>
         </table>
 
     </div>
-    <div class="panel-footer">
+    <!--<div class="panel-footer">
         <div class="row">
             <div class="col col-xs-4">Page 1 of 5
             </div>
@@ -54,5 +57,5 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div>-->
 </div>
