--- a/parser/views/attributes_groups/attributes.ejs
+++ b/parser/views/attributes_groups/attributes.ejs
@@ -1,1 +1,62 @@
-das
+<h1>Группы атрибутов</h1>
+
+<div class="panel panel-default panel-table">
+    <div class="panel-heading">
+        <div class="row">
+            <div class="col col-xs-6">
+
+            </div>
+            <div class="col col-xs-6 text-right">
+                <button type="button" class="btn btn-sm btn-primary btn-create">Добавить новую группу</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="panel-body">
+        <table class="table table-striped table-bordered table-list">
+            <thead>
+            <tr>
+                <th><em class="glyphicon glyphicon-cog"></em></th>
+                <th class="hidden-xs">№</th>
+                <th>Название группы</th>
+            </tr>
+            </thead>
+            <% Attributes.attributes.forEach(function(attribute, i) { %>
+
+            <tbody>
+            <tr>
+                <td align="center">
+                    <a class="btn btn-default"><em class="glyphicon glyphicon-pencil"></em></a>
+                    <a class="btn btn-danger"><em class="glyphicon glyphicon-trash"></em></a>
+                </td>
+                <td class="col-md-1 hidden-xs" style="text-align: center;"><%= i + 1 %></td>
+                <td><a href="/attributes_groups/attribute/<%= Attributes._id %>"><%= attribute %></a></td>
+
+            </tr>
+            <% }); %>
+
+            </tbody>
+        </table>
+
+    </div>
+
+    <!--<div class="panel-footer">
+        <div class="row">
+            <div class="col col-xs-4">Page 1 of 5
+            </div>
+            <div class="col col-xs-8">
+                <ul class="pagination hidden-xs pull-right">
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                </ul>
+                <ul class="pagination visible-xs pull-right">
+                    <li><a href="#">«</a></li>
+                    <li><a href="#">»</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>-->
+</div>
