--- a/parser/views/attributes_groups/attributes_groups.ejs
+++ b/parser/views/attributes_groups/attributes_groups.ejs
@@ -7,7 +7,7 @@
 
             </div>
             <div class="col col-xs-6 text-right">
-                <button type="button" class="btn btn-sm btn-primary btn-create">Добавить новую группу</button>
+                <a href="attributes_groups/new" type="button" class="btn btn-sm btn-primary btn-create">Добавить новую группу</a>
             </div>
         </div>
     </div>
