--- a/parser/public/css/custom.css
+++ b/parser/public/css/custom.css
@@ -1,14 +1,37 @@
-.panel-table .panel-body{
-    padding:0;
+.glyphicon-refresh-animate {
+    -animation: spin .7s infinite linear;
+    -webkit-animation: spin2 .7s infinite linear;
 }
 
-.panel-table .panel-body .table-bordered{
+@-webkit-keyframes spin2 {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    from {
+        transform: scale(1) rotate(0deg);
+    }
+    to {
+        transform: scale(1) rotate(360deg);
+    }
+}
+
+.panel-table .panel-body {
+    padding: 0;
+}
+
+.panel-table .panel-body .table-bordered {
     border-style: none;
-    margin:0;
+    margin: 0;
 }
 
 .panel-table .panel-body .table-bordered > thead > tr > th:first-of-type {
-    text-align:center;
+    text-align: center;
     width: 100px;
 }
 
@@ -22,32 +45,32 @@
     border-left: 0px;
 }
 
-.panel-table .panel-body .table-bordered > tbody > tr:first-of-type > td{
+.panel-table .panel-body .table-bordered > tbody > tr:first-of-type > td {
     border-bottom: 0px;
 }
 
-.panel-table .panel-body .table-bordered > thead > tr:first-of-type > th{
+.panel-table .panel-body .table-bordered > thead > tr:first-of-type > th {
     border-top: 0px;
 }
 
-.panel-table .panel-footer .pagination{
-    margin:0;
+.panel-table .panel-footer .pagination {
+    margin: 0;
 }
 
 /*
 used to vertically center elements, may need modification if you're not using default sizes.
 */
-.panel-table .panel-footer .col{
+.panel-table .panel-footer .col {
     line-height: 34px;
     height: 34px;
 }
 
-.panel-table .panel-heading .col h3{
+.panel-table .panel-heading .col h3 {
     line-height: 30px;
     height: 30px;
 }
 
-.panel-table .panel-body .table-bordered > tbody > tr > td{
+.panel-table .panel-body .table-bordered > tbody > tr > td {
     line-height: 34px;
 }
 
