--- a/parser/views/attributes_groups/attributes_groups.ejs
+++ b/parser/views/attributes_groups/attributes_groups.ejs
@@ -26,8 +26,8 @@
             <tbody>
             <tr>
                 <td align="center">
-                    <a class="btn btn-default"><em class="glyphicon glyphicon-pencil"></em></a>
-                    <a class="btn btn-danger"><em class="glyphicon glyphicon-trash"></em></a>
+                    <a href="/attributes_groups/edit/<%=group._id%>" class="btn btn-default"><em class="glyphicon glyphicon-pencil"></em></a>
+                    <a href="/attributes_groups/delete/<%=group._id%>" class="btn btn-danger"><em class="glyphicon glyphicon-trash"></em></a>
                 </td>
                 <td class="col-md-1 hidden-xs" style="text-align: center;"><%= i+1 %></td>
                 <td><a href="/attributes_groups/<%=group._id%>"><%= group.group_name %></a></td>
