--- a/parser/views/attributes_groups/groups/new_group.ejs
+++ b/parser/views/attributes_groups/groups/new_group.ejs
@@ -14,11 +14,11 @@
         </label>
     </div>
 
-    <fieldset class="form-group">
+    <!--<fieldset class="form-group">
         <label for="exampleInputPassword1">Аттрибуты через запятую
             <textarea class="form-control" name="attributes" cols="150" rows="5"></textarea>
         </label>
-    </fieldset>
+    </fieldset>-->
 
 
     <button type="submit" class="btn btn-primary">Submit</button>
