--- a/parser/views/item_parse.ejs
+++ b/parser/views/item_parse.ejs
@@ -44,7 +44,7 @@
                 <div class="col-md-12">
                     <div class="checkbox">
                         <label>
-                            <input type="checkbox" name='delete_file'> Удалить файл
+                            <input type="checkbox" name='delete_file' value="true"> Удалить файл
                         </label>
                     </div>
                 </div>
