--- a/client/views/layout.ejs
+++ b/client/views/layout.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%=typeof title == 'undefined' ? 'New Sails App' : title%></title>
+<head>
+  <title><%=typeof title == 'undefined' ? 'New Sails App' : title%></title>
 
-    <!-- Viewport mobile tag for sensible mobile support -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <!-- Viewport mobile tag for sensible mobile support -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 
     <!--
@@ -26,31 +26,37 @@
             + Change the order of your CSS files
             + Import stylesheets from other directories
             + Use a different or additional preprocessor, like SASS, SCSS or Stylus
-    -->
+          -->
 
-    <!--STYLES-->
-    <link rel="stylesheet" href="/styles/css/animations.css">
-    <link rel="stylesheet" href="/styles/css/bootstrap-theme.css">
-    <link rel="stylesheet" href="/styles/css/bootstrap.css">
-    <link rel="stylesheet" href="/styles/css/custom.css">
-    <link rel="stylesheet" href="/styles/css/extralayers.css">
-    <link rel="stylesheet" href="/styles/css/font-awesome.css">
-    <link rel="stylesheet" href="/styles/css/ie.css">
-    <link rel="stylesheet" href="/styles/css/line-icons.css">
-    <link rel="stylesheet" href="/styles/css/navstylechange.css">
-    <link rel="stylesheet" href="/styles/css/style.css">
-    <link rel="stylesheet" href="/styles/colors/color1.css">
-    <!--STYLES END-->
-  </head>
+          <!--STYLES-->
+          <link rel="stylesheet" href="/styles/css/animations.css">
+          <link rel="stylesheet" href="/styles/css/bootstrap-theme.css">
+          <link rel="stylesheet" href="/styles/css/bootstrap.css">
+          <link rel="stylesheet" href="/styles/css/custom.css">
+          <link rel="stylesheet" href="/styles/css/extralayers.css">
+          <link rel="stylesheet" href="/styles/css/font-awesome.css">
+          <link rel="stylesheet" href="/styles/css/ie.css">
+          <link rel="stylesheet" href="/styles/css/line-icons.css">
+          <link rel="stylesheet" href="/styles/css/navstylechange.css">
+          <link rel="stylesheet" href="/styles/css/style.css">
+          <link rel="stylesheet" href="/styles/colors/color1.css">
+          <!--STYLES END-->
+        </head>
 
-<body class="home">
-  <div class="body">
-    <% include partials/header.ejs %>  
-    <%- body %>
+        <body class="home">
+          <div class="body">
+            <% include partials/header.ejs %>  
+            <% include partials/search_form.ejs %>  
 
-    <% include partials/footer.ejs %>
-    <a id="back-to-top"><i class="fa fa-angle-double-up"></i></a>
-    </div>
+            <div class="main" role="main">
+              <div id="content" class="content full padding-b0">
+                <%- body %>
+              </div>
+            </div>
+
+            <% include partials/footer.ejs %>
+            <a id="back-to-top"><i class="fa fa-angle-double-up"></i></a>
+          </div>
 
     <!--
         Client-side Templates
@@ -71,11 +77,11 @@
             + Use a different template engine (handlebars, jade, dust, etc.)
             + Internationalize your client-side templates using a server-side
               stringfile before they're served.
-    -->
+            -->
 
-    <!--TEMPLATES-->
-    
-    <!--TEMPLATES END-->
+            <!--TEMPLATES-->
+            
+            <!--TEMPLATES END-->
 
 
     <!--
@@ -99,19 +105,19 @@
           + Import scripts from other directories
           + Use a different preprocessor, like TypeScript
 
-    -->
+        -->
 
-    <!--SCRIPTS-->
-    <script src="/js/dependencies/sails.io.js"></script>
-    <script src="/js/dependencies/jquery-2.2.4.min.js"></script>
-    <script src="/js/dependencies/bootstrap.js"></script>
-    <script src="/js/helper-plugins.js"></script>
-    <script src="/js/init.js"></script>
-    <script src="/js/modernizr.js"></script>
-    <script src="/js/ui-plugins.js"></script>
-    <script src="/js/vendor/prettyphoto/js/prettyphoto-v3.1.5.js"></script>
-    <script src="/js/vendor/prettyphoto/js/prettyphoto.js"></script>
-    <script src="/js/waypoints.js"></script>
-    <!--SCRIPTS END-->
-  </body>
-</html>
+        <!--SCRIPTS-->
+        <script src="/js/dependencies/sails.io.js"></script>
+        <script src="/js/dependencies/jquery-2.2.4.min.js"></script>
+        <script src="/js/dependencies/bootstrap.js"></script>
+        <script src="/js/helper-plugins.js"></script>
+        <script src="/js/init.js"></script>
+        <script src="/js/modernizr.js"></script>
+        <script src="/js/ui-plugins.js"></script>
+        <script src="/js/vendor/prettyphoto/js/prettyphoto-v3.1.5.js"></script>
+        <script src="/js/vendor/prettyphoto/js/prettyphoto.js"></script>
+        <script src="/js/waypoints.js"></script>
+        <!--SCRIPTS END-->
+      </body>
+      </html>
