--- a/client/views/layout.ejs
+++ b/client/views/layout.ejs
@@ -43,10 +43,10 @@
           <!--STYLES END-->
         </head>
 
-        <body class="home">
+        <body class="home header-v3">
           <div class="body">
-            <% include partials/header.ejs %>  
-            <% include partials/search_form.ejs %>  
+            <% include partials/header.ejs %>
+            <% include partials/search_form.ejs %>
 
             <div class="main" role="main">
               <div id="content" class="content full padding-b0">
