--- a/client/assets/styles/css/custom.css
+++ b/client/assets/styles/css/custom.css
@@ -1,7 +1,12 @@
 div.search-form-inner.main-page {
-  padding: 15px;
+    padding: 15px;
 }
 
 .right {
-  float: right;
+    float: right;
+}
+
+.site-header {
+    /*box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.176);*/
+    border-bottom: 3px solid #e96c4c;
 }
