--- a/client/views/partials/search_form.ejs
+++ b/client/views/partials/search_form.ejs
@@ -142,7 +142,7 @@
 
               <div class="row">
                 <div class="col-md-8 col-md-offset-4">
-                  <input type="submit" class="btn btn-block btn-info btn-lg" value="Искать">
+                  <input type="submit" class="btn btn-block btn-success btn-lg" value="Искать">
                 </div>
               </div>
             </div>
