--- a/client/assets/styles/css/style.css
+++ b/client/assets/styles/css/style.css
@@ -3,7 +3,7 @@
 Project:	AutoStars
 Version:	1.1
 Last change:	02/17/15
-Author:	imithemes 
+Author:	imithemes
 -------------------------------------------------------------------*/
 /* Stylesheets and Google fonts import */
 @import url("font-awesome.css");
@@ -77,8 +77,8 @@ html, body {
 
 html, hmtl a{
 	width:100%;
-	font-size: 100%; 
-	-webkit-text-size-adjust: 100%; 
+	font-size: 100%;
+	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
 }
 a{
@@ -105,7 +105,7 @@ a img {
 	border: none;
 }
 a > img {
-	vertical-align: middle;	
+	vertical-align: middle;
 }
 .gray-bg{
 	background:#e8e8e8;
@@ -126,7 +126,7 @@ a > img {
 	color:#fff!important;
 }
 img {
-	max-width: 100%;	
+	max-width: 100%;
 }
 img, object, embed, audio, video {
 	max-width: 100%;
@@ -161,7 +161,7 @@ i, em, .italic{
 	text-align: center;
 }
 .text-align-right {
-	text-align: right;	
+	text-align: right;
 }
 .color-text {
     color: #ffffff;
@@ -179,15 +179,15 @@ i, em, .italic{
 }
 
 :-moz-placeholder { /* Firefox 18- */
-   color: #999;  
+   color: #999;
 }
 
 ::-moz-placeholder {  /* Firefox 19+ */
-   color: #999;  
+   color: #999;
 }
 
-:-ms-input-placeholder {  
-   color: #999;  
+:-ms-input-placeholder {
+   color: #999;
 }
 iframe{
 	border:0;
@@ -927,10 +927,10 @@ p.meta-data{
 	visibility: hidden;
 	line-height: 0;
 	height: 0;
-} 
+}
 html[xmlns] .slides {
 	display: block;
-} 
+}
 * html .slides {
 	height: 1%;
 }
@@ -938,7 +938,7 @@ html[xmlns] .slides {
 	zoom: 1;
 	margin:0;
 	list-style-type:none;
-}  
+}
 .hero-slider{
 	position:relative;
 	z-index:1;
@@ -1985,7 +1985,7 @@ body.boxed .body{
 /* Header v3 */
 .top-header{
 	/*background:#252525;	*/
-	background:#f0f2fa;	
+	background:#f0f2fa;
 	box-shadow: 0 1px 2px rgba(0,0,0,.1);
 	height:40px;
 	line-height:40px;
@@ -2164,7 +2164,7 @@ body.boxed .body{
 .utility-icons > li > a > [class*=" icon-"]:before{
 	line-height:42px;
 }
- 
+
 .search-trigger{
 	margin-top:-1px;
 }
@@ -2903,16 +2903,16 @@ h1.page-title{
 }
 .result-item-view-buttons a{
 	display:inline-block;
-	float:left;
-	width:50%;
+	/*float:left;*/
+	width:100%;
 	text-align:center;
-	padding:9px 0 5px;
-	background:#F9F9F9;
+	padding:10px 0 5px;
+	background: #45a345;
 	text-transform:uppercase;
-	font-size:12px;
+	font-size:14px;
 	font-family: 'Roboto Condensed', sans-serif;
 	font-weight:700;
-	color:#6a6a6a
+	color:white;
 }
 .result-item-view-buttons a i{
 	line-height:2em;
@@ -3191,7 +3191,7 @@ h1.page-title{
 	height: 100%;
 	width: 6px;
 	display: inline-block;
-	
+
 	-webkit-animation: stretchdelay 1.2s infinite ease-in-out;
 	animation: stretchdelay 1.2s infinite ease-in-out;
 }
@@ -3217,15 +3217,15 @@ h1.page-title{
 }
 
 @-webkit-keyframes stretchdelay {
-	0%, 40%, 100% { -webkit-transform: scaleY(0.4) }  
+	0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
 	20% { -webkit-transform: scaleY(1.0) }
 }
 
 @keyframes stretchdelay {
-	0%, 40%, 100% { 
+	0%, 40%, 100% {
 	  transform: scaleY(0.4);
 	  -webkit-transform: scaleY(0.4);
-	}  20% { 
+	}  20% {
 	  transform: scaleY(1.0);
 	  -webkit-transform: scaleY(1.0);
 	}
@@ -4902,13 +4902,13 @@ body{
 /* Pricing Tables
 /*-------------------------------------------------------------------------------------------*/
 .pricing-table {
-	margin-top: 50px;	
+	margin-top: 50px;
 	margin-bottom: 50px;
 }
-.pricing-table:after { 
-	display: block; 
-	visibility: hidden; 
-	clear: both; 
+.pricing-table:after {
+	display: block;
+	visibility: hidden;
+	clear: both;
 	height: 0;
 	content: "";
 }
@@ -5002,7 +5002,7 @@ body{
 .pricing-column h4 {
 	margin-bottom: 0px;
 	margin-left: -22px;
-	padding: 20px 30px 6px 30px;	
+	padding: 20px 30px 6px 30px;
 	color: #333333;
 	font-size: 54px!important;
 	line-height: 42px!important;
@@ -5691,7 +5691,7 @@ body{
 @media only screen and (min-width: 480px) and (max-width: 767px) {
 }
 @media all and (-webkit-min-device-pixel-ratio: 1.5) {
-	
+
 }
 
 @media only screen and (max-width: 767px) {
