--- a/client/views/homepage.ejs
+++ b/client/views/homepage.ejs
@@ -1,58 +1,124 @@
 <div class="container">
- 
+
   <div class="col-md-12">
     <div class="col-md-3 search-filters" id="Search-Filters">
+      <div class="accordion">
+        <div class="panel panel-default">
+          <div class="panel-heading" style="background-color: #e96c4c; padding-top: 5px; padding-bottom: 0;">
+            <h3 style="color:white; text-align: center;">Тип транспорта</h3>
+          </div>
+          <div class="panel-body">
 
-      <h3>Refine Search</h3>
-      <div class="accordion" id="toggleArea">
+            <div class="accordion-group panel">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" href="/legkovie">Легковые <span class="badge right">42</span> </a>
+              </div>
+            </div>
+            <div class="accordion-group panel">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" href="/legkovie">Легковые <span class="badge right">42</span> </a>
+              </div>
+            </div>
+            <div class="accordion-group panel">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" href="/legkovie">Легковые <span class="badge right">42</span> </a>
+              </div>
+            </div>
+            <div class="accordion-group panel">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" href="/legkovie">Легковые <span class="badge right">42</span> </a>
+              </div>
+            </div>
+            <div class="accordion-group panel">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" href="/legkovie">Легковые <span class="badge right">42</span> </a>
+              </div>
+            </div>
+            <div class="accordion-group panel">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" href="/legkovie">Легковые <span class="badge right">42</span> </a>
+              </div>
+            </div>
+            <div class="accordion-group panel">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" href="/legkovie">Легковые <span class="badge right">42</span> </a>
+              </div>
+            </div>
+            <div class="accordion-group panel">
+              <div class="accordion-heading">
+                <a class="accordion-toggle" href="/legkovie">Легковые <span class="badge right">42</span> </a>
+              </div>
+            </div>
+          </div>
 
-        <div class="accordion-group panel">
-          <div class="accordion-heading">
-            <a class="accordion-toggle" href="/legkovie">Легковые <span class="badge right">42</span> </a>
-          </div>
         </div>
-        <div class="accordion-group panel">
-          <div class="accordion-heading">
-            <a class="accordion-toggle" href="/legkovie">Легковые <span class="badge right">42</span> </a>
-          </div>
-        </div>
-        <div class="accordion-group panel">
-          <div class="accordion-heading">
-            <a class="accordion-toggle" href="/legkovie">Легковые <span class="badge right">42</span> </a>
-          </div>
-        </div>
-        <div class="accordion-group panel">
-          <div class="accordion-heading">
-            <a class="accordion-toggle" href="/legkovie">Легковые <span class="badge right">42</span> </a>
-          </div>
-        </div>
-        <div class="accordion-group panel">
-          <div class="accordion-heading">
-            <a class="accordion-toggle" href="/legkovie">Легковые <span class="badge right">42</span> </a>
-          </div>
-        </div>
-        <div class="accordion-group panel">
-          <div class="accordion-heading">
-            <a class="accordion-toggle" href="/legkovie">Легковые <span class="badge right">42</span> </a>
-          </div>
-        </div>
-        <div class="accordion-group panel">
-          <div class="accordion-heading">
-            <a class="accordion-toggle" href="/legkovie">Легковые <span class="badge right">42</span> </a>
-          </div>
-        </div>
-        <div class="accordion-group panel">
-          <div class="accordion-heading">
-            <a class="accordion-toggle" href="/legkovie">Легковые <span class="badge right">42</span> </a>
-          </div>
-        </div>
-
       </div>
 
       <!--<a href="#" class="btn-default btn-sm btn"><i class="fa fa-refresh"></i> Reset search</a>
       <a href="#" class="btn-primary btn-sm btn"><i class="fa fa-folder-o"></i> Save search</a>-->
     </div>
-    <div class="col-md-9">
+
+
+    <div class="col-md-9 results-container">
+      <div class="results-container-in">
+        <div class="waiting" style="display:none;">
+          <div class="spinner">
+            <div class="rect1"></div>
+            <div class="rect2"></div>
+            <div class="rect3"></div>
+            <div class="rect4"></div>
+            <div class="rect5"></div>
+          </div>
+        </div>
+        <div id="results-holder" class="results-grid-view">
+
+          <% items.forEach(function(item, i) { %>
+          <div class="result-item format-standard" style="height: 475px;">
+            <div class="result-item-image">
+              <a href="vehicle-details.html" class="media-box"><img src="<%= item['attributes']['photo']['value'][0] %>" alt=""><span
+                  class="zoom"><span class="icon"><i class="icon-plus"></i></span></span></a>
+              <span class="label label-default vehicle-age">2012</span>
+              <div class="result-item-view-buttons">
+                <!--<a href="https://www.youtube.com/watch?v=P5mvnA4BV7Y" data-rel="prettyPhoto"><i class="fa fa-play"></i>
+                  View video</a>-->
+                <a href="vehicle-details.html"><i class="fa fa-plus"></i> Подробнее</a>
+              </div>
+            </div>
+            <div class="result-item-in">
+              <h4 class="result-item-title"><a href="vehicle-details.html"><%= item['attributes']['page_heading']['value'][0] %></a></h4>
+              <div class="result-item-cont">
+                <div class="result-item-block col1">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis egestas rhoncus. Donec
+                    facilisis fermentum sem, ac viverra ante luctus vel. Donec vel mauris quam..</p>
+                </div>
+                <div class="result-item-block col2">
+                  <div class="result-item-pricing">
+                    <div class="price">$45000</div>
+                  </div>
+                  <div class="result-item-action-buttons">
+                    <a href="#" class="btn btn-default btn-sm"><i class="fa fa-star-o"></i> Сохранить</a>
+                    <a href="vehicle-details.html" class="btn btn-default btn-sm">Enquire</a><br>
+                    <a href="#" class="distance-calc"><i class="fa fa-map-marker"></i> Одесса</a>
+                  </div>
+                </div>
+              </div>
+              <div class="result-item-features">
+                <ul class="inline">
+                  <li><i class="fa fa-caret-right"></i> 4 door Sedan</li>
+                  <li><i class="fa fa-caret-right"></i> 6 cyl, 3.0 L Petrol</li>
+                  <li><i class="fa fa-caret-right"></i> 6 speed Automatic</li>
+            <!--      <li><i class="fa fa-caret-right"></i> 4x4 Wheel Drive</li>
+                  <li><i class="fa fa-caret-right"></i> Listed by Individual</li>-->
+                </ul>
+              </div>
+            </div>
+          </div>
+          <% }); %>
+
+        </div>
+      </div>
+    </div>
+    <!--<div class="col-md-9">
       <section class="listing-block recent-vehicles">
         <div class="listing-header">
           <h3>Recently Listed Vehicles</h3>
@@ -72,7 +138,7 @@
                 class="label label-success premium-listing">Brand New</span>
               <h5 class="vehicle-title"><a
                   href="http://preview.imithemes.com/autostars-wp/cars/mazda-mazda-3-brand-new/">
-<%= item['attributes']['page_heading']['value'][0] %>
+                  <%= item['attributes']['page_heading']['value'][0] %>
                 </a></h5>
               <span class="vehicle-meta">Mazda, Gold,  by <abbr
                   class="user-type" title="Listed by Dealer">Dealer</abbr></span>
@@ -84,9 +150,8 @@
         <% }); %>
 
       </section>
-    </div>
+    </div>-->
   </div>
-
 
   <div class="col-md-12">
     <div class="tabs">
