--- a/client/assets/styles/css/style.css
+++ b/client/assets/styles/css/style.css
@@ -175,19 +175,19 @@ i, em, .italic{
 	border-radius:100%;
 }
 ::-webkit-input-placeholder {
-   color: #999;
+   color: #414042;
 }
 
 :-moz-placeholder { /* Firefox 18- */
-   color: #999;
+   color: #414042;
 }
 
 ::-moz-placeholder {  /* Firefox 19+ */
-   color: #999;
+   color: #414042;
 }
 
 :-ms-input-placeholder {
-   color: #999;
+   color: #414042;
 }
 iframe{
 	border:0;
@@ -259,11 +259,11 @@ blockquote{
 blockquote p{
 	margin-bottom:0;
 	white-space:1px;
-	color:#777;
+	color:#414042;
 	font-size:15px;
 }
 blockquote cite{
-	color:#999;
+	color:#414042;
 	font-weight:700;
 	font-family:"Roboto", sans-serif;
 }
@@ -284,7 +284,7 @@ p.lg{
 	color:#ccc;
 }
 p.small{
-	color:#999;
+	color:#414042;
 	font-size:12px;
 	line-height:17px;
 	margin-top:10px;
@@ -424,7 +424,7 @@ label {
   display: inline-block;
   margin-bottom: 5px;
   font-weight:400;
-  color:#999;
+  color:#414042;
 }
 
 /* ==================================================
@@ -572,7 +572,7 @@ label {
 	color:#fff;
 }
 .meta-data{
-	color:#999;
+	color:#414042;
 	font-size:12px;
 	line-height:normal;
 	display:block;
@@ -1162,7 +1162,7 @@ html[xmlns] .slides {
 	content:"";
 }
 .sort-source li a{
-	color:#999;
+	color:#414042;
 	margin:0 20px;
 }
 .sort-source.nav-pills li a{
@@ -1266,8 +1266,8 @@ html[xmlns] .slides {
    6. Site Structure & Appearance
 ================================================== */
 body{
-	background-color:#fff;
-	color:#777;
+	background-color: #fdfdfd;
+	/*color:#414042;*/
 	font-size:14px;
 	font-weight:400;
 	font-family: 'Roboto', sans-serif;
@@ -1481,7 +1481,7 @@ body.boxed .body{
 .logged-in-user .user-name{
 	font-size:13px;
 	display:block;
-	color:#777
+	color:#414042
 }
 .navbar{
 	background:rgba(255,255,255,.9);
@@ -1493,7 +1493,7 @@ body.boxed .body{
 	border-radius:0;
 	height:52px;
 	box-shadow:0 1px 2px rgba(0,0,0,.1);
-	color:#777;
+	color:#414042;
 	-webkit-transition:all 0.3s ease 0.2s;
 	-moz-transition:all 0.3s ease 0.2s;
 	-ms-transition:all 0.3s ease 0.2s;
@@ -1591,10 +1591,10 @@ body.boxed .body{
 .main-navigation > ul > li:last-child a{
 }
 .main-navigation > ul > li > a > i{
-	color:#999;
+	color:#414042;
 }
 .sticky-header .main-navigation > ul > li > a > i{
-	color:#999;
+	color:#414042;
 }
 .main-navigation > ul > li > a:hover{
 	text-decoration:none;
@@ -1639,7 +1639,7 @@ body.boxed .body{
 }
 .dd-menu > ul > li > ul li > a{
 	display:block;
-	color:#777;
+	color:#414042;
 	padding:10px 20px;
 	border-bottom:1px solid rgba(0,0,0,.05);
 	white-space:nowrap;
@@ -1686,7 +1686,7 @@ body.boxed .body{
 	width:1070px;
 	left:15px!important;
 	min-width:inherit;
-	color:#777;
+	color:#414042;
 }
 @media (min-width: 1200px) {
 	body.boxed .dd-menu > ul > li.megamenu > ul{
@@ -1728,7 +1728,7 @@ body.boxed .body{
 	background:none;
 	list-style-type:none;
 	display:block!important;
-	color:#777;
+	color:#414042;
 	left:0!important;
 	box-shadow:none;
 	opacity:1!important;
@@ -1924,7 +1924,7 @@ body.boxed .body{
 	margin-left:15px;
 }
 .header-v2 .topnav > ul > li > a{
-	color:#999;
+	color:#414042;
 	font-weight:400;
 	font-size:12px;
 	line-height:72px;
@@ -1985,7 +1985,7 @@ body.boxed .body{
 /* Header v3 */
 .top-header{
 	/*background:#252525;	*/
-	background:#f0f2fa;
+	/*background:#f0f2fa;*/
 	box-shadow: 0 1px 2px rgba(0,0,0,.1);
 	height:40px;
 	line-height:40px;
@@ -2048,7 +2048,7 @@ body.boxed .body{
 	padding-right:5px;
 }
 .header-v4 .top-navigation > li > a > i{
-	color:#999;
+	color:#414042;
 }
 .additional-triggers > li{
 	display:inline-block;
@@ -2084,7 +2084,7 @@ body.boxed .body{
 }
 .share-text{
 	line-height:40px;
-	color:#999
+	color:#414042
 }
 .share-text i{
 	position:relative;
@@ -2114,7 +2114,7 @@ body.boxed .body{
 	display:block;
 	font-size:12px;
 	font-style:italic;
-	color:#999;
+	color:#414042;
 	width:100%;
 	font-family: 'Playfair Display', serif;
 }
@@ -2226,7 +2226,7 @@ h1.page-title{
 }
 .service-block{
 	background:#2f2f2f;
-	color:#999;
+	color:#414042;
 	margin-bottom:10px;
 }
 .service-block h4 a{
@@ -2290,7 +2290,7 @@ h1.page-title{
 	margin-top:15px;
 }
 .vehicle-meta{
-	color:#999;
+	color:#414042;
 	font-size:11px;
 	line-height:normal;
 	display:block;
@@ -2317,7 +2317,7 @@ h1.page-title{
 	margin-bottom:18px;
 }
 .post-actions{
-	color:#999;
+	color:#414042;
 	font-size:11px;
 	margin-bottom:12px;
 	text-transform:uppercase;
@@ -2356,7 +2356,7 @@ h1.page-title{
 	margin-bottom:9px;
 }
 .post-meta{
-	color:#999;
+	color:#414042;
 	font-size:11px;
 	margin-top:8px;
 	text-transform:uppercase;
@@ -2400,7 +2400,7 @@ h1.page-title{
 .post-review-block .post-content{
 	margin-right:35%;
 	padding-right:0;
-	color:#999;
+	color:#414042;
 }
 .post-review-block .post-date{
 	width:70%;
@@ -2542,7 +2542,7 @@ h1.page-title{
 }
 .site-footer{
 	background:#2f2f2f;
-	color:#999;
+	color:#414042;
 }
 .site-footer .form-control{
 	background: rgba(255,255,255,.8);
@@ -2556,7 +2556,7 @@ h1.page-title{
 	-moz-box-shadow:none;
 }
 .site-footer a{
-	color:#999;
+	color:#414042;
 }
 .site-footer a:hover{
 	color:#fff;
@@ -2578,7 +2578,7 @@ h1.page-title{
 	font-size:12px;
 }
 .footer_widget.widget a{
-	color:#999;
+	color:#414042;
 }
 
 /* Sign Up Form */
@@ -2607,7 +2607,7 @@ h1.page-title{
 	height:20px;
 	text-align:center;
 	line-height:18px;
-	color:#999;
+	color:#414042;
 	margin-left:5px;
 	background-color:#eee;
 }
@@ -2715,7 +2715,7 @@ h1.page-title{
 	padding:12px 15px;
 }
 .tool-box-head a{
-	color:#999;
+	color:#414042;
 }
 .tool-box-head a:hover{
 	color:#666;
@@ -2796,7 +2796,7 @@ h1.page-title{
 .tool-box .listing .textb .price{
 	display:block;
 	margin-top:7px;
-	color:#999
+	color:#414042
 }
 .tool-box .listing .delete, .tool-box .listing .save{
 	width:6%;
@@ -2811,7 +2811,7 @@ h1.page-title{
 }
 .tool-box .listing .delete a:hover, .tool-box .listing .save a:hover{
 	text-decoration:none;
-	color:#999;
+	color:#414042;
 }
 .tool-box .tool-search-listing .link a{
 	text-decoration:underline;
@@ -2993,7 +2993,7 @@ h1.page-title{
 	margin-bottom:5px;
 }
 .distance-calc{
-	color:#999;
+	color:#414042;
 	font-size:12px;
 }
 .distance-calc:hover{
@@ -3072,10 +3072,10 @@ h1.page-title{
 	letter-spacing:0;
 }
 .search-filters .accordion-heading .accordion-toggle{
-	color:#777;
+	color:#414042;
 }
 .search-filters .accordion-group a{
-	color:#777;
+	color:#414042;
 }
 .search-filters .accordion-heading.accordionize .accordion-toggle i, .search-filters .accordion-heading.togglize .accordion-toggle i{
 	right:0;
@@ -3091,7 +3091,7 @@ h1.page-title{
 	background:none;
 }
 .search-filters .accordion-heading.accordionize .accordion-toggle.active i, .search-filters .accordion-heading.togglize .accordion-toggle.active i{
-	color:#777;
+	color:#414042;
 }
 .search-filters .accordion-inner{
 	border:0;
@@ -3343,7 +3343,7 @@ h1.page-title{
 	font-weight:400;
 	font-size:13px;
 	text-transform:none;
-	color:#777;
+	color:#414042;
 	padding-left:14px;
 	padding-right:14px;
 	font-family: 'Roboto', sans-serif;
@@ -3607,7 +3607,7 @@ h1.page-title{
 	padding:22px 0 0;
 	font-size:11px;
 	font-weight:700;
-	color:#999;
+	color:#414042;
 }
 .dealer-block-add:before, .dealer-block-add:after{
 	content:" ";
@@ -3671,11 +3671,11 @@ h1.page-title{
 	border-top:0;
 }
 .listing-form-steps li a{
-	color:#999;
+	color:#414042;
 	display:block;
 }
 .listing-form-steps li.active a, .listing-form-steps li:hover a, .listing-form-steps li.completed a{
-	color:#777;
+	color:#414042;
 }
 .listing-form-steps li .step-icon{
 	float:left;
@@ -3686,7 +3686,7 @@ h1.page-title{
 .listing-form-steps li .step-title{
 }
 .listing-form-steps li .step-desc{
-	color:#999;
+	color:#414042;
 	font-size:12px;
 	display:block;
 	padding-left:40px;
@@ -3818,7 +3818,7 @@ h1.page-title{
 	margin-top:0;
 }
 .users-sidebar .list-group li a > i{
-	color:#999;
+	color:#414042;
 	margin-right:5px;
 }
 .users-sidebar li.active a, .users-sidebar .list-group li.active a > i, .users-sidebar li.active:hover a, .users-sidebar .list-group li.active:hover a > i{
@@ -4124,7 +4124,7 @@ h1.page-title{
 	font-family: 'Roboto Condensed', sans-serif;
 	text-transform:uppercase;
 	font-size:13px;
-	color:#999
+	color:#414042
 }
 .points-review .review-point .star-rating-container{
 	float:right;
@@ -4421,7 +4421,7 @@ body{
 	display:inline-block;
 	width:100px;
 	height:100px;
-	color:#999999;
+	color:#414042999;
 	line-height:125px;
 	margin:10px 0;
 	margin-bottom:20px;
@@ -4430,7 +4430,7 @@ body{
 }
 .fact{
 	display:inline-block;
-	color:#999999;
+	color:#414042999;
 	font-size:15px;
 	font-family: 'Playfair Display', serif;
 	font-style:italic
@@ -4482,7 +4482,7 @@ body{
 }
 .icon-box p{
 	margin:8px 0 0;
-	color:#999
+	color:#414042
 }
 .icon-box .before-heading{
 	font-size:14px
@@ -4808,7 +4808,7 @@ body{
 	color:#252525;
 }
 .icon-box p {
-	color:#999;
+	color:#414042;
 	margin:8px 0 0;
 }
 .icon-box .before-heading {
@@ -5019,7 +5019,7 @@ body{
 	display: block;
 	padding-bottom: 17px;
 	min-height: 38px;
-	color: #999999;
+	color: #414042999;
 }
 .pricing-column ul {
 	margin-left: 0px;
@@ -5199,7 +5199,7 @@ body{
 		margin-right:20px;
 		margin-top:0;
 		float:left;
-		color:#999;
+		color:#414042;
 	}
 	.header-v3 .toggle-menu{
 		display:none;
